styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 255, 255, 255;
  --background-start-rgb: 0, 0, 0;
  --background-end-rgb: 0, 0, 0;
  --primary-color: #590505;
  --secondary-color: #10205e;
  --tertiary-color: rgb(64, 64, 64);
  --tertiary-color-hovering: rgb(84, 84, 84);
  --text-color: rgb(255, 255, 255);
  --text-color-hovering: rgb(220, 220, 220);
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
    --primary-color: #590505;
    --secondary-color: #10205e;
    --tertiary-color: rgb(64, 64, 64);
    --tertiary-color-hovering: rgb(84, 84, 84);
    --text-color: rgb(255, 255, 255);
    --text-color-hovering: rgb(220, 220, 220);
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes slideInFromLeft {
  from {
    transform: translateX(-100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

